--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
+ # Dependencies
+ node_modules/
+ client/node_modules/
+ server/node_modules/
+
+ # Logs
+ npm-debug.log*
+ yarn-debug.log*
+ yarn-error.log*
+
+ # Env files
+ .env
+ client/.env
+ server/.env
+
+ # Build outputs
+ /dist
+ /build
+ client/dist
+ server/dist
 client/node_modules/
 server/node_modules/
