add validator and normalization error

--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.3",
-    "prisma": "^6.15.0"
+    "prisma": "^6.15.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
